--- a/src/main/resources/templates/member/find/userId.html
+++ b/src/main/resources/templates/member/find/userId.html
@@ -13,7 +13,9 @@
                 <button type="button" id="hpBtn">휴대폰 인증</button>
             </div>
 
+
             <form th:action="@{/member/find/userId}" method="post">
+                <input type="hidden" name="authMethod" id="authMethod" value="1">
             <table class="auth-table" id="authEmailTable">
                 <tr>
                     <th>이름</th>
@@ -45,12 +47,13 @@
                     <th>휴대폰</th>
                     <td>
                         <div class="input-row">
-                            <input type="text" name="hp">
-                            <button type="button" id="hp-auth-send">인증번호 전송</button>
+                            <input type="text" name="hp" placeholder="- 포함 12자리 입력">
+                            <button type="button" id="btnCheckHp">인증번호 전송</button>
+                            <span class="hpResult"></span>
                         </div>
                         <div class="input-row">
-                            <input type="text" name="phone-code">
-                            <button type="button" id="hp-auth-check">확인</button>
+                            <input type="text" id="hpCode">
+                            <button type="button" id="btnHpCode">확인</button>
                         </div>
 
                     </td>
