--- a/src/main/resources/templates/company/index.html
+++ b/src/main/resources/templates/company/index.html
@@ -14,7 +14,7 @@
                 <div class="landing-text">
                     <h1>더 빠르게, 더 편리하게, 모두를 위한 쇼핑 경험</h1>
                     <p>큐팡, 일상의 즐거움을 연결하다</p>
-                </div>
+                </div>index.html
             </div>
 
             <div class="highlight">
