--- a/src/main/resources/templates/member/_head.html
+++ b/src/main/resources/templates/member/_head.html
@@ -36,7 +36,7 @@
                     <!-- 로그인 상태 -->
                     <li sec:authorize="isAuthenticated()">
                         <!-- 일반 로그인일 때 -->
-                        <span th:if="${member.name != null}" th:text="${member.name}"></span>
+                        <span th:if="${#authentication.name != null}" th:text="${#authentication.name}"></span>
 
                         <!-- 소셜 로그인일 때 -->
                         <span th:if="${oauth2User != null}" th:text="${oauth2User.name}"></span>
