--- a/src/main/resources/templates/member/_head.html
+++ b/src/main/resources/templates/member/_head.html
@@ -35,12 +35,7 @@
                 <ul class="utility-list" id="utility-menu">
                     <!-- 로그인 상태 -->
                     <li sec:authorize="isAuthenticated()">
-                        <!-- 일반 로그인일 때 -->
-                        <span th:if="${member.name != null}" th:text="${member.name}"></span>
-
-                        <!-- 소셜 로그인일 때 -->
-                        <span th:if="${oauth2User != null}" th:text="${oauth2User.name}"></span>
-                        님
+                        <span th:text="${member.name}"></span> 님
                     </li>
                     <li sec:authorize="isAuthenticated()">
                         <a th:href="@{/member/logout}">로그아웃</a>
